# nllb-api

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Dockerfile.build  Dockerfile.cuda-build  Makefile  README.md  docker-compose-cpu.yml  docker-compose-gpu.yml  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  supervisord.conf  test.py
.github/: dependabot.yml  renovate.json
.github/workflows/: build.yml  client.yml  clippy.yml  cuda.yml  dependabot.yml  deploy.yml  formatter.yml  main.yml  warmer.yml
client/: Cargo.toml  nllb.pyi  pyproject.toml
client/src/: blocking_client.rs  client.rs  lib.rs  structs.rs
client/tests/: conftest.py  test_async_client.py  test_client.py
language/: Cargo.toml  language.pyi  pyproject.toml
language/.cargo/: config.toml
language/src/: lib.rs
server/: __init__.py  app.py  config.py  cors.py  initialise_routes.py  initialise_server.py  logger.py  scripts.py  singleton.py
server/api/: __init__.py  health.py
server/api/root/: __init__.py  index.py
server/api/v1/: __init__.py  cpu.py  index.py  translate.py
server/api/v2/: __init__.py  index.py  translate.py
server/api/v3/: __init__.py  detect_language.py  index.py  translate.py
server/api/v4/: __init__.py  index.py  language.py  languages.py  schema.py  translator.py
server/config/: __init__.py  general.py  get_config.py  hypercorn.py
server/config/exceptions/: __init__.py  invalid_port.py  invalid_root_path.py  invalid_worker.py
server/dependencies/: __init__.py  translation.py
server/features/: __init__.py  detect_language.py  language_detector.py  translator.py
server/features/detector/: __init__.py  ensemble.py  protocol.py  stub.py
server/features/translator/: __init__.py  nllb.py  protocol.py  stub.py
server/features/types/: __init__.py  languages.py  translator_options.py
server/guards/: __init__.py  secret.py
server/helpers/: __init__.py  has_internet_access.py  huggingface_download.py  huggingface_file_download.py
server/lifespans/: __init__.py  consul_register.py  inject_state.py  load_fasttext_model.py  load_language_detection_model.py  load_model.py  load_nllb_model.py  load_translator_model.py
server/middlewares/: __init__.py  logging.py
server/plugins/: __init__.py  consul.py
server/schemas/: __init__.py  health.py
server/schemas/v1/: __init__.py  cpu.py  language.py  text.py  tokens.py  translated.py  translation.py
server/telemetry/: __init__.py  log_handler.py  meter_provider.py  tracer_provider.py
server/typedefs/: __init__.py  compute_types.py  confidence.py  devices.py  language.py  score.py  state.py
server/types/: __init__.py  cpufeature.py  standardization.py  state.py
server/typings/cpufeature/: extension.pyi
server/typings/ctranslate2/: __init__.pyi
server/typings/fasttext/: FastText.pyi  __init__.pyi
server/typings/fasttext_pybind/: __init__.pyi
server/typings/hypercorn/: asyncio.pyi
server/typings/starlette/: types.pyi
server/typings/tokenizers/: __init__.pyi
server/typings/transformers/models/: nllb.pyi
server/utils/: __init__.py  has_internet_access.py  huggingface_download.py  huggingface_file_download.py
tests/: conftest.py  stress_test.py  test_async_client.py  test_client.py  test_cors.py  test_has_internet_access.py  test_language_detect_api.py  test_translate.py  test_translate_api.py
