[project]
name = "nllb-api"
version = "4.2.0"
description = "A fast CPU-based API for NLLB"
requires-python = ">=3.13.7, <3.14"
dependencies = [
    "ctranslate2>=4.6.0",
    "fasttext>=0.9.3",
    "granian>=2.5.5",
    "litestar>=2.18.0",
    "pydantic-settings>=2.11.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "picologging>=0.9.3; python_version < '3.13'",
    "tokenizers>=0.22.1",
    "prometheus-client>=0.23.1",
    "aiohttp>=3.13.0",
    "language",
    "opentelemetry-instrumentation-asgi>=0.58b0",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "fast-query-parsers>=1.0.3",
]

[project.optional-dependencies]
cuda = ["nvidia-cublas-cu12>=12.9.1.4"]

[project.scripts]
nllb-api = "server:main"
nllb-api-stub = "server.scripts:stub"
docker-cpu = "server.scripts:cpu"
docker-gpu = "server.scripts:gpu"
docker-hf = "server.scripts:huggingface"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "hypothesis>=6.141.0",
    "nodejs-wheel-binaries>=22.20.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""
module-name = "server"
source-exclude = ["**/typings"]

[tool.uv.sources]
language = { path = "language" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "Q",
    "TC",
    "ANN001",
    "ANN002",
    "PLC0414",
    "INP001",
    "S104",
    "S603",
    "PYI001",
    "COM812",
    "SLF001",
    "PT013",
    "PLR0913",
]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
stubPath = "server/typings"
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.pytest.ini_options]
pythonpath = ["."]

