[project]
name = "nllb-api"
version = "4.2.0"
description = "A fast CPU-based API for NLLB"
requires-python = ">=3.14.3, <3.15"
dependencies = [
    "ctranslate2>=4.7.1",
    "fasttext>=0.9.3",
    "granian>=2.7.1",
    "litestar>=2.21.0",
    "pydantic-settings>=2.13.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "picologging>=0.9.3; python_version < '3.13'",
    "tokenizers>=0.22.2",
    "aiohttp>=3.13.3",
    "language",
    "opentelemetry-instrumentation-asgi>=0.58b0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "fast-query-parsers>=1.0.3",
    "opentelemetry-instrumentation-system-metrics>=0.58b0",
]

[project.optional-dependencies]
cuda = ["nvidia-cublas-cu12>=12.9.1.4"]

[project.scripts]
nllb-api = "server:main"
nllb-api-stub = "server.scripts:stub"
docker-cpu = "server.scripts:cpu"
docker-gpu = "server.scripts:gpu"
docker-hf = "server.scripts:huggingface"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "nllb",
    "nodejs-wheel-binaries>=24.13.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-env>=1.3.2",
    "ruff>=0.15.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "server"
source-exclude = ["**/typings"]

[tool.uv.sources]
language = { path = "language" }
nllb = { path = "client" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "Q",
    "TC",
    "ANN001",
    "ANN002",
    "PLC0414",
    "INP001",
    "S104",
    "S603",
    "PYI001",
    "COM812",
    "SLF001",
    "PT013",
    "PLR0913",
    "D203",
    "D212",
]

[tool.pyright]
stubPath = "server/typings"
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pytest_env]
TESTING = "True"
AUTH_TOKEN = "testtoken"
