[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[package]
name = "nllb"
version = "0.1.0"
edition = "2024"

[lib]
name = "nllb"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", default-features = false }
pyo3-async-runtimes = { version = "0.27.0", default-features = false, features = ["tokio-runtime"] }
reqwest = { version = "0.12.28", default-features = false, features = ["http2", "json", "blocking", "rustls-tls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }

[build-dependencies]
pyo3-build-config = { version = "0.27.2", default-features = false, features = ["resolve-config"] }
