[project]
name = "nllb"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = ["maturin>=1.12.6", "pyright>=1.1.408", "ruff>=0.15.4"]

[build-system]
requires = ["maturin>=1.12.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
exclude = ["**/uv.lock"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.pyright]
typeCheckingMode = "strict"
