[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[package]
name = "language"
version = "0.1.0"
edition = "2024"

[lib]
name = "language"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.28.0"
default-features = false
features = ["macros"]

[dependencies.lingua]
version = "1.7.2"
default-features = false
features = [
    "afrikaans",
    "albanian",
    "arabic",
    "armenian",
    "azerbaijani",
    "basque",
    "belarusian",
    "bengali",
    "bokmal",
    "bosnian",
    "bulgarian",
    "catalan",
    "chinese",
    "croatian",
    "czech",
    "danish",
    "dutch",
    "english",
    "esperanto",
    "estonian",
    "finnish",
    "french",
    "ganda",
    "georgian",
    "german",
    "greek",
    "gujarati",
    "hebrew",
    "hindi",
    "hungarian",
    "icelandic",
    "indonesian",
    "irish",
    "italian",
    "japanese",
    "kazakh",
    "korean",
    "latvian",
    "lithuanian",
    "macedonian",
    "malay",
    "maori",
    "marathi",
    "mongolian",
    "nynorsk",
    "persian",
    "polish",
    "portuguese",
    "punjabi",
    "romanian",
    "russian",
    "serbian",
    "shona",
    "slovak",
    "slovene",
    "somali",
    "sotho",
    "spanish",
    "swahili",
    "swedish",
    "tagalog",
    "tamil",
    "telugu",
    "thai",
    "tsonga",
    "tswana",
    "turkish",
    "ukrainian",
    "urdu",
    "vietnamese",
    "welsh",
    "xhosa",
    "yoruba",
    "zulu",
]
