[project]
name = "language"
requires-python = ">=3.14.2, <3.15"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = ["maturin>=1.11.5"]

[build-system]
requires = ["maturin>=1.11.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
exclude = ["**/uv.lock"]
