[project]
name = "language"
requires-python = ">=3.14.3, <3.15"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = ["maturin>=1.12.6"]

[build-system]
requires = ["maturin>=1.12.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
exclude = ["**/uv.lock"]
